# Mjolnir

./: CHANGELOG.MD  Cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/api/: error.rs  mod.rs  router.rs  server.rs
src/api/handlers/: auth_handler.rs  user_handler.rs
src/api/routes/: auth_routes.rs  user_routes.rs
src/application/: app.rs  config.rs  mod.rs  state.rs
src/application/repository/: mod.rs  user_repo.rs
src/domain/models/: user.rs
src/infrastructure/: database.rs
src/infrastructure/database/postgres/migrations/: 20250604083811_mjolnir_schema.sql
src/infrastructure/redis/: connection.rs
tests/: endpoint.rs
