[package]
name = "mjolnir"
version = "0.1.0"
edition = "2024"
authors = ["Victor Eni"]


[dependencies]
axum = "0.8.4"
hyper = {version = "1.6.0", features = ["full"]}
tokio = {version = "1.45.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
dotenvy = "0.15.7"
tower-http = {version = "0.6.6", features = ["cors"]}
serde_json = "1.0.140"
sqlx = {version ="0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}
uuid = {version = "1.17.0", features = ["v4", "serde"]}
sqlx-cli = {version = "0.8.6", features = ["rustls", "postgres"]}